src/app/nav-bar/nav-bar.component.css
* {
    cursor: default;
}
nav {
    z-index: 1;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    position: fixed;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}

nav>ul {
    margin: auto;
    width: 100vw;
    height: 10vh;
    position: sticky;
}

li {
    flex: 1 120px;
}

li a {
    display: block;
    min-width: 140px;
    height: 50px;
    text-align: center;
    line-height: 50px;
    font-size: x-large;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #fff;
    background: #084386;
    text-decoration: none;
}

li:hover a {
    background: #008cba;
    color: #fff;
}

li:hover ul a {
    background: #f3f3f3;
    color: #084386;
    height: 40px;
    line-height: 40px;
    flex: 1;
    width: inherit;
}

li:hover ul a:hover {
    background: #084386;
    color: #fff;
}

li ul {
    display: none;
    align-items: flex-start;
    width: inherit;
    position: absolute;
    min-width: 15em;
}


li ul div {
    display: block;
    float: none;
    flex: 1;
}

div[role="sublink-container"] {
    min-width: inherit;
    width: 100%;
}


li ul div a {
    width: inherit;
    min-width: 30rem;
    padding: 0 20px;
    font-size: 1.7em;
}


ul li a:hover+.hidden,
.hidden:hover {
    display: block;
}


.show-menu {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-decoration: none;
    color: #008cba;
    background: #f3f3f3;
    text-align: center;
    padding: 10px 0;
    display: none;
}


input[type=checkbox] {
    display: none;
}


input[type=checkbox]:checked~#menu {
    display: block;
}


@media screen and (max-width: 760px) {
    ul {
        position: static;
        display: none;
    }
    li {
        margin-bottom: 1px;
    }
    ul li,
    li a {
        width: 100%;
    }
    .show-menu {
        display: block;
    }
}

